feat(client): rework score component to include current portfolio chart

--- a/client/src/app.css
+++ b/client/src/app.css
@@ -16,7 +16,7 @@
   --nuclear-accent-color: #000000;
   --storage-background-color: #1982c4;
   --storage-accent-color: #ffffff;
-  --market-background-color: #6a4c93;
+  --market-background-color: #896bb3;
   --market-accent-color: #ffffff;
 }
 
